Make the Last.fm service work without KWallet.

This was broken because the wrong signals were used in the confirmation dialog.

BUG: 235861